[gd_scene load_steps=2 format=3 uid="uid://b8x7lam2n3o4p"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_main_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Go For Launch"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 48

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Choose your starting position:"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="NewPlayerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Create New Player"
custom_minimum_size = Vector2(400, 60)
theme_override_font_sizes/font_size = 20

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="NPCSelectionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Or play as existing character:"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 20

[node name="NPCList" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
name = "NPCList"
custom_minimum_size = Vector2(0, 200)

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LoadGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Game (Spawn All NPCs)"
custom_minimum_size = Vector2(400, 60)
theme_override_font_sizes/font_size = 20
